[gd_scene load_steps=16 format=3 uid="uid://dpqtvtf5uxnjn"]

[ext_resource type="Script" uid="uid://cw7pmsfdaakoc" path="res://answer_popup.gd" id="1_juwdi"]
[ext_resource type="FontFile" uid="uid://08vndck327l2" path="res://Jersey10-Regular.ttf" id="2_ddl3n"]
[ext_resource type="Texture2D" uid="uid://dxj6spi2ksyr4" path="res://assets/answerpopup/hammer.png" id="2_xh38c"]
[ext_resource type="AudioStream" uid="uid://c4vnxjg8208ji" path="res://assets/audio/victory/VictorySmall.wav" id="3_mqpby"]
[ext_resource type="Script" uid="uid://webohet2yr5x" path="res://virtual_keyboard/CustomKeyboard.gd" id="3_qoqra"]
[ext_resource type="AudioStream" uid="uid://dvlhfxpdy87b5" path="res://assets/audio/gameover.mp3" id="3_ws6o5"]
[ext_resource type="Texture2D" uid="uid://bqvh75xq0ogat" path="res://assets/answerpopup/background.png" id="4_5vgbp"]
[ext_resource type="Texture2D" uid="uid://bsoa7x86v1w12" path="res://assets/answerpopup/hole_sprite.png" id="5_xh38c"]
[ext_resource type="Texture2D" uid="uid://dror5upxnwwc6" path="res://assets/answerpopup/mole.png" id="6_5s6qv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vgbp"]
bg_color = Color(0.24269372, 0.24269372, 0.24269372, 0.624)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xh38c"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ddl3n"]
bg_color = Color(0.53333336, 0.53333336, 0.53333336, 0.70980394)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 0.45700002)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color(0, 0, 0, 0.43)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqpby"]
bg_color = Color(0.6, 0.6, 0.6, 0.52156866)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws6o5"]
bg_color = Color(0.6267051, 0.10742133, 7.70092e-07, 0.9764706)
border_color = Color(0, 0, 0, 0.47058824)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qoqra"]
bg_color = Color(0, 0, 0, 0.5)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.6402972, 0.6402972, 0.6402971, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="AnswerPopup" type="CanvasLayer"]
layer = 100
script = ExtResource("1_juwdi")

[node name="Hammer" type="TextureRect" parent="."]
z_index = 100
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("2_xh38c")
expand_mode = 1
stretch_mode = 2

[node name="DarkOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -160.0
offset_right = 297.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="QuestionLabel" type="Label" parent="Panel/VBoxContainer"]
z_index = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
text = "Yay!! u found the well type your answer below"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WhackContainer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(620, 620)
layout_mode = 2

[node name="Background" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer"]
modulate = Color(1, 1, 1, 0.476)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_5vgbp")
stretch_mode = 6

[node name="MoleGrid" type="GridContainer" parent="Panel/VBoxContainer/WhackContainer"]
custom_minimum_size = Vector2(620, 620)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -310.0
offset_right = 310.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="MoleSlot0" type="Control" parent="Panel/VBoxContainer/WhackContainer/MoleGrid"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="Hole" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot0"]
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("5_xh38c")

[node name="OptionLabel" type="Label" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot0"]
z_index = 3
layout_mode = 0
offset_left = -304.0
offset_right = -223.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_5vgbp")
theme_override_styles/focus = SubResource("StyleBoxFlat_xh38c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClipContainer" type="Control" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot0"]
clip_contents = true
anchors_preset = 0
offset_left = 5.0
offset_top = -2.5
offset_right = 248.0
offset_bottom = 190.5
mouse_filter = 2

[node name="Mole" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot0/ClipContainer"]
layout_mode = 0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 320.0
mouse_filter = 2
texture = ExtResource("6_5s6qv")

[node name="MoleSlot1" type="Control" parent="Panel/VBoxContainer/WhackContainer/MoleGrid"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="Hole" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot1"]
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("5_xh38c")

[node name="OptionLabel" type="Label" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot1"]
z_index = 3
layout_mode = 0
offset_left = -304.0
offset_right = -223.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_5vgbp")
theme_override_styles/focus = SubResource("StyleBoxFlat_xh38c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClipContainer" type="Control" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot1"]
clip_contents = true
anchors_preset = 0
offset_left = 5.0
offset_top = -2.5
offset_right = 248.0
offset_bottom = 190.5
mouse_filter = 2

[node name="Mole" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot1/ClipContainer"]
layout_mode = 0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 320.0
mouse_filter = 2
texture = ExtResource("6_5s6qv")

[node name="MoleSlot2" type="Control" parent="Panel/VBoxContainer/WhackContainer/MoleGrid"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="Hole" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot2"]
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("5_xh38c")

[node name="OptionLabel" type="Label" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot2"]
z_index = 3
layout_mode = 0
offset_left = -304.0
offset_right = -223.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_5vgbp")
theme_override_styles/focus = SubResource("StyleBoxFlat_xh38c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClipContainer" type="Control" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot2"]
clip_contents = true
anchors_preset = 0
offset_left = 5.0
offset_top = -2.5
offset_right = 248.0
offset_bottom = 190.5
mouse_filter = 2

[node name="Mole" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot2/ClipContainer"]
layout_mode = 0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 320.0
mouse_filter = 2
texture = ExtResource("6_5s6qv")

[node name="MoleSlot3" type="Control" parent="Panel/VBoxContainer/WhackContainer/MoleGrid"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="Hole" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot3"]
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("5_xh38c")

[node name="OptionLabel" type="Label" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot3"]
z_index = 3
layout_mode = 0
offset_left = -304.0
offset_right = -223.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_5vgbp")
theme_override_styles/focus = SubResource("StyleBoxFlat_xh38c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClipContainer" type="Control" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot3"]
clip_contents = true
anchors_preset = 0
offset_left = 5.0
offset_top = -2.5
offset_right = 248.0
offset_bottom = 190.5
mouse_filter = 2

[node name="Mole" type="TextureRect" parent="Panel/VBoxContainer/WhackContainer/MoleGrid/MoleSlot3/ClipContainer"]
layout_mode = 0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 320.0
mouse_filter = 2
texture = ExtResource("6_5s6qv")

[node name="OptionsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OptionA" type="Button" parent="Panel/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ddl3n")
theme_override_styles/hover = SubResource("StyleBoxFlat_ddl3n")
text = "option 1"

[node name="OptionB" type="Button" parent="Panel/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ddl3n")
theme_override_styles/hover = SubResource("StyleBoxFlat_ddl3n")
text = "option 2"

[node name="OptionC" type="Button" parent="Panel/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ddl3n")
theme_override_styles/hover = SubResource("StyleBoxFlat_ddl3n")
text = "option 3"

[node name="OptionD" type="Button" parent="Panel/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ddl3n")
theme_override_styles/hover = SubResource("StyleBoxFlat_ddl3n")
text = "option 4"

[node name="FillContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AnswerInput" type="LineEdit" parent="Panel/VBoxContainer/FillContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_mqpby")
theme_override_styles/read_only = SubResource("StyleBoxFlat_mqpby")
theme_override_styles/focus = SubResource("StyleBoxFlat_mqpby")
alignment = 1

[node name="WordleGrid" type="VBoxContainer" parent="Panel/VBoxContainer/FillContainer"]
layout_mode = 2

[node name="Row0" type="HBoxContainer" parent="Panel/VBoxContainer/FillContainer/WordleGrid"]
layout_mode = 2

[node name="Row1" type="HBoxContainer" parent="Panel/VBoxContainer/FillContainer/WordleGrid"]
layout_mode = 2

[node name="Row2" type="HBoxContainer" parent="Panel/VBoxContainer/FillContainer/WordleGrid"]
layout_mode = 2

[node name="Row3" type="HBoxContainer" parent="Panel/VBoxContainer/FillContainer/WordleGrid"]
layout_mode = 2

[node name="Row4" type="HBoxContainer" parent="Panel/VBoxContainer/FillContainer/WordleGrid"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_ws6o5")
theme_override_styles/hover = SubResource("StyleBoxFlat_ws6o5")
text = "SUBMIT"

[node name="CustomKeyboard" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_qoqra")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/CustomKeyboard"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -113.0
offset_top = 29.0
offset_right = -33.0
offset_bottom = 109.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.8745098, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.2509804, 0.22745098, 1)
theme_override_fonts/font = ExtResource("2_ddl3n")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_qoqra")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qoqra")
theme_override_styles/hover = SubResource("StyleBoxFlat_qoqra")
text = "CLOSE"

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mqpby")
volume_db = -20.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ws6o5")
volume_db = -10.0
